--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"@faker-js/faker": "^8.4.1",
+		"@fortawesome/fontawesome-free": "^6.5.2",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"axios": "^1.7.2",
 		"countries-list": "^3.1.0",
